[package]
name = "sg_image_reader"
description = "Library for reading images in sg3 files used by Impression Games citybuilding games."
version = "0.2.0"
authors = ["Jakub Zawadzki <kuba.zaw@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/zawapl/sg-reader"
categories = []
readme = "README.md"
keywords = ["sg3"]

[dev-dependencies]
druid = { version = "0.8.3", features = ["im"] } # https://github.com/linebender/druid/tree/ed4f9ef0e763d8396ef2fb7facd8ea4ba541c41e
piet-common = { version = "0.8.0", features = ["png"] }
image = { version = "0.25.8", features = ["png"] }
